[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_selenium_php_travels"
version = "0.1.0"
description = "A Python Selenium project testing Demo site PhpTravels"
readme = "README.rst"
authors = [
  {name = "Phat Trinh", email = "lowbudgetgaming001@gmail.com"}
]
maintainers = [
  {name = "Phat Trinh", email = "lowbudgetgaming001@gmail.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/trinhphat001/python_selenium_php_travels/issues"
changelog = "https://github.com/trinhphat001/python_selenium_php_travels/blob/master/changelog.md"
homepage = "https://github.com/trinhphat001/python_selenium_php_travels"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

